--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <string name="app_name">Fileexplorer</string>
+    <string name="app_name">Video Player</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_fileexplorer">File Manager</string>
+    <string name="title_activity_fileexplorer">Video Player</string>
 
 </resources>
